Added a color box widget.
This widget assigns colors randomly or explicitly, and allows the user to use a color picker to change it on click.
Now class spectra rows also have this widget as part of the row.

--- a/qt_stylesheets/class_spectrum_row.qss
+++ b/qt_stylesheets/class_spectrum_row.qss
@@ -7,3 +7,10 @@ QLineEdit {
   max-width: 100px;
   min-width: 100px;
 }
+
+#class_color_box {
+  max-height: 25px;
+  max-width: 25px;
+  min-height: 25px;
+  min-width: 25px;
+}
