--- a/qt_stylesheets/image_layout_widget.qss
+++ b/qt_stylesheets/image_layout_widget.qss
@@ -1,5 +1,5 @@
 background-color: white;
-max-height: 500px;
-max-width: 500px;
+/*max-height: 500px;
+max-width: 500px;*/
 min-height: 500px;
 min-width: 500px;
