Fixed coloring issues of the QListWidget.
TODO: Color still doesn't show on the color box widgets.

--- a/qt_stylesheets/class_spectra_view.qss
+++ b/qt_stylesheets/class_spectra_view.qss
@@ -1,3 +1,8 @@
+QListView {
+  /* Hide selection highlight (border). */
+  show-decoration-selected: 0;
+}
+
 QLineEdit {
   max-width: 100px;
   min-width: 100px;
