The class list in layout view is now a QListWidget.
This is much neater than before, and allows the user to click to select a specific class.

--- a/qt_stylesheets/image_layout_view.qss
+++ b/qt_stylesheets/image_layout_view.qss
@@ -1,9 +1,14 @@
-QPushButton {
+QLineEdit {
+  max-width: 150px;
+  min-width: 50px;
+}
+
+QListWidget {
   max-width: 150px;
   min-width: 150px;
 }
 
-QLineEdit {
+QPushButton {
   max-width: 150px;
-  min-width: 50px;
+  min-width: 150px;
 }
